--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -60,6 +60,10 @@
    line-height: 130%;
    gap: 2px;
    letter-spacing: 0.5px;
+
+   &:hover {
+      color: #e5be20 !important;
+   }
 }
 
 .navbar-logo-image {
@@ -105,6 +109,7 @@
          1px 676px 189px 0px rgba(0, 0, 0, 0);
       backdrop-filter: blur(10px);
       padding: 24px;
+      cursor: default;
 
       .menu-column {
          display: flex;
