--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -52,7 +52,7 @@
    align-items: center;
    text-decoration: none;
    height: 100%;
-   color: #c8c8c8 !important;
+   color: #c8c8c8;
    font-family: "Manrope";
    font-size: 14px;
    font-style: normal;
@@ -364,4 +364,12 @@ a {
 
 a:hover {
    background: transparent !important;
+}
+
+.hover-color {
+   color: #e5be20 !important;
+}
+
+.hover-rotate {
+   transform: rotate(180deg);
 }
