--- a/src/components/sections/Solutions/Solutions.scss
+++ b/src/components/sections/Solutions/Solutions.scss
@@ -6,11 +6,7 @@
 
    .solutions_content_container {
       .title-wrapper {
-         margin-bottom: 20px;
-
-         @media all and (min-width: 768px) {
-            margin-bottom: 40px;
-         }
+         margin-bottom: 56px;
 
          p {
             margin-bottom: 5px;
@@ -26,13 +22,17 @@
 
          p:nth-child(2) {
             font-size: 20px;
+            max-width: 150px;
+            margin: 0 auto;
 
             @media all and (min-width: 400px) {
                font-size: 24px;
+               max-width: 180px;
             }
 
             @media all and (min-width: 992px) {
                font-size: 32px;
+               max-width: 100%;
             }
          }
       }
@@ -42,9 +42,12 @@
          gap: 56px;
          margin-bottom: 50px;
 
-         
-         @media all and (min-width: 400px) {
-            margin-bottom: 72px;
+         @media all and (min-width: 576px) {
+            margin-bottom: 100px;
+         }
+
+         @media all and (min-width: 992px) {
+            margin-bottom: 150px;
          }
 
          .problem_card__row {
@@ -54,29 +57,34 @@
             gap: 10px;
 
             @media all and (min-width: 576px) {
-               gap: 20px;
+               gap: 32px;
             }
          }
 
          .left_card {
             flex: 1;
-            display: flex;
-            min-height: 500px;
             align-items: center;
             justify-content: center;
             border-radius: 16px;
-            background: linear-gradient(119deg,
-                  rgba(0, 0, 0, 0) -55.58%,
-                  rgba(226, 222, 241, 0.1) 100%);
+            background: linear-gradient(300deg, rgba(26,33,35,1) 0%, rgba(10,17,15,1) 60%);
             backdrop-filter: blur(10px);
             min-height: 380px;
-            border-radius: 6px;
+            border-radius: 16px;
+            display: none;
+
+            @media all and (min-width: 576px) {
+               display: flex;
+            }
+
+            @media all and (min-width: 992px) {
+               min-height: 450px;
+            }
 
             img {               
                width: 90px;
 
                @media all and (min-width: 576px) {
-                  width: 50%;
+                  width: 45%;
                }
 
                @media all and (min-width: 1200px) {
@@ -85,20 +93,36 @@
             }
          }
 
+         .left_card.flip-bg {
+            background: linear-gradient(60deg, rgba(26,33,35,1) 0%, rgba(10,17,15,1) 60%);
+         }
+
          .right_card {
             flex: 1;
             padding-top: 24px;
-            display: grid;
-            gap: 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
             padding: 0;
 
+            @media all and (min-width: 576px) {
+               gap: 16px;
+               padding-block: 20px;
+            }
+
             .heading-img {
+               width: 30px;
                margin-bottom: 10px;
+
+               @media all and (min-width: 576px) {
+                  width: 40px;
+               }
             }
 
             .heading {
                font-size: 16px;
-               
+               font-weight: 400;
+
                @media all and (min-width: 400px) {
                   font-size: 18px;
                }
@@ -108,7 +132,7 @@
                }
 
                @media all and (min-width: 992px) {
-                  font-size: 24px;
+                  font-size: 40px;
                }
             }
 
@@ -144,7 +168,7 @@
                display: flex;
                align-items: flex-end;
                min-width: 100px;
-               margin-top: 1rem !important;
+               margin-top: 10px;
                font-size: 14px;
 
                .text {
