--- a/src/components/pages/CareerDetailsPage/CareerDetailsPage.scss
+++ b/src/components/pages/CareerDetailsPage/CareerDetailsPage.scss
@@ -205,6 +205,10 @@
             flex-direction: column;
             padding-bottom: 48px;
 
+            @media all and (min-width: 992px) {
+               flex-direction: row;
+            }
+
             .title_place_exp {
                float: left;
 
@@ -243,6 +247,7 @@
 
                   @media all and (min-width: 992px) {
                      font-size: 16px;
+                     padding-bottom: 0px;
                   }
                }
             }
@@ -275,11 +280,11 @@
                   cursor: pointer;
 
                   @media all and (min-width: 400px) {
-                     font-size: 14px;
+                     // font-size: 14px;
                   }
                   
                   @media all and (min-width: 992px) {
-                     font-size: 16px;
+                     // font-size: 16px;
                   }
                }
 
@@ -304,11 +309,11 @@
                   background: none;
 
                   @media all and (min-width: 400px) {
-                     font-size: 14px;
+                     // font-size: 14px;
                   }
 
                   @media all and (min-width: 992px) {
-                     font-size: 16px;
+                     // font-size: 16px;
                   }
                }
 
@@ -367,13 +372,13 @@
             margin-bottom: 12px;
             margin-bottom: 16px;
 
-            @media all and (min-width: 400px) {
-               font-size: 12px;
-            }
+            // @media all and (min-width: 400px) {
+            //    font-size: 12px;
+            // }
 
-            @media all and (min-width: 992px) {
-               font-size: 14px;
-            }
+            // @media all and (min-width: 992px) {
+            //    font-size: 14px;
+            // }
          }
 
          .jobdesc {
@@ -489,7 +494,7 @@
    }
 
    img {
-      margin-left: 5px;
+      // margin-left: 5px;
    }
 }
 
