--- a/src/components/pages/Career/Projects/Projects.scss
+++ b/src/components/pages/Career/Projects/Projects.scss
@@ -50,14 +50,32 @@
          padding: 20px;
          border-radius: 1rem;
          border: 1px solid rgba(#fff, 0.05);
-         background: radial-gradient(157.56% 157.56% at 50% 65.71%,
-               rgba(255, 255, 255, 0.07) 0%,
-               rgba(0, 0, 0, 0) 100%);
+         background: linear-gradient(180deg,
+               rgba(255, 255, 255, 0) -17.2%,
+               rgba(255, 255, 255, 0.07) 115.79%);
+         mix-blend-mode: lighten;
          align-items: center;
          backdrop-filter: blur(10px);
+         transition: all 0.3s;
+
+         @media all and (min-width: 768px) {
+            align-items: flex-start;
+         }
 
          @media all and (min-width: 992px) {
             padding: 40px;
+         }
+
+         .project-card-dot-img {
+            position: absolute;
+            z-index: -1;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            transition: all 0.3s;
+            object-fit: cover;
          }
 
          .image-card {
@@ -80,9 +98,13 @@
             max-width: 60%;
             max-width: 100%;
             display: flex;
-            text-align: center;
+
             @media all and (min-width: 400px) {
                font-size: 18px;
+            }
+
+            @media all and (min-width: 768px) {
+               text-align: left;
             }
 
             @media all and (min-width: 992px) {
@@ -94,12 +116,22 @@
             font-size: 12px;
             display: flex;
             text-align: center;
+
             @media all and (min-width: 400px) {
                font-size: 14px;
             }
 
+            @media all and (min-width: 576px) {
+               max-width: 400px;
+            }
+
+            @media all and (min-width: 768px) {
+               text-align: left;
+            }
+
             @media all and (min-width: 992px) {
                font-size: 16px;
+               max-width: 100%;
             }
          }
 
@@ -111,6 +143,11 @@
             background: radial-gradient(185.16% 185.16% at 50% 0%,
                   rgba(0, 31, 41, 0.75) 0%,
                   #022032 100%) !important;
+         }
+
+         &:hover .project-card-dot-img {
+            opacity: 0.1;
+            filter: opacity(0.3);
          }
       }
    }
