--- a/src/components/pages/Common/Applications/products_Applications.scss
+++ b/src/components/pages/Common/Applications/products_Applications.scss
@@ -39,12 +39,14 @@
       gap: 2rem;
       margin-top: 3.5rem;
       grid-template-columns: 1fr;
-         
+
       @media all and (min-width: 768px) {
          grid-template-columns: 1fr 1fr;
       }
+
       // }
       .project-card {
+         position: relative;
          width: 100%;
          // height: 500px;
          display: flex;
@@ -53,9 +55,10 @@
          padding: 20px;
          border-radius: 1rem;
          border: 1px solid rgba(#fff, 0.05);
-         background: radial-gradient(157.56% 157.56% at 50% 65.71%,
-               rgba(255, 255, 255, 0.07) 0%,
-               rgba(0, 0, 0, 0) 100%);
+         background: linear-gradient(180deg,
+               rgba(255, 255, 255, 0) -17.2%,
+               rgba(255, 255, 255, 0.07) 115.79%);
+         mix-blend-mode: lighten;
          backdrop-filter: blur(10px);
          // @media (max-width: 768px) {
          // height: 400px;
@@ -71,7 +74,7 @@
             text-align: left;
             align-items: flex-start;
          }
-         
+
          &:hover {
             background: radial-gradient(185.16% 185.16% at 50% 0%,
                   rgba(0, 31, 41, 0.75) 0%,
@@ -82,8 +85,26 @@
             margin-bottom: 0px;
          }
 
+         .project-card-dot-img {
+            position: absolute;
+            z-index: -1;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            transition: 0.3s;
+            object-fit: cover;
+         }
+
+         &:hover .project-card-dot-img {
+            opacity: 0.1;
+            filter: opacity(0.3);
+         }
+
          .image-card {
             overflow: hidden;
+
             img {
                width: 100%;
                max-height: 294px !important;
@@ -95,9 +116,11 @@
 
                transform: scale(1.1);
                object-position: -12px 10px;
+
                @media all and (min-width: 768px) {
                   object-position: -10px 10px;
                }
+
                // @media all and (min-width: 768px) {
                //    object-position: -25px;
                //    transform: scale(1.2);
@@ -127,6 +150,7 @@
             display: flex;
             font-size: 12px;
             margin-bottom: 20px;
+
             @media all and (min-width: 400px) {
                font-size: 14px;
             }
