--- a/src/components/pages/Career/Projects/Projects.scss
+++ b/src/components/pages/Career/Projects/Projects.scss
@@ -98,6 +98,7 @@
             max-width: 60%;
             max-width: 100%;
             display: flex;
+            margin-top: 32px;
 
             @media all and (min-width: 400px) {
                font-size: 18px;
@@ -116,7 +117,8 @@
             font-size: 12px;
             display: flex;
             text-align: center;
-
+            margin-bottom: 0px;
+            
             @media all and (min-width: 400px) {
                font-size: 14px;
             }
