Add snap into view for features tabs navigation

--- a/src/components/pages/Products/Features/Features.scss
+++ b/src/components/pages/Products/Features/Features.scss
@@ -136,7 +136,7 @@
             }
 
             &:active {
-               border: none !important;
+               // border: none !important;
             }
 
             &[disabled] {
