--- a/src/components/sections/Partners/Partners.scss
+++ b/src/components/sections/Partners/Partners.scss
@@ -57,6 +57,7 @@
    display: flex;
    flex-direction: column;
    justify-content: center;
+   align-items: center;
    align-self: stretch;
    background: linear-gradient(153deg, #111815 0%, #0f1311 98.89%);
    border: 1px solid #0f1a1654;
@@ -90,9 +91,14 @@
       text-align: center;
       font-size: 12px;
       margin-bottom: 10px;
+      max-width: 300px;
 
       @media all and (min-width: 400px) {
          font-size: 14px;
+      }
+
+      @media all and (min-width: 576px) {
+         max-width: 100%;
       }
    }
    
@@ -106,7 +112,8 @@
       pointer-events: none;
       position: absolute;
       top: 0;
-      width: 100%;
+      left: -5px;
+      width: 101%;
       height: 100%;
       z-index: 2;
       background: rgb(9,16,14);
