--- a/src/components/pages/AboutUs/WhyHow/About_WhyHow.scss
+++ b/src/components/pages/AboutUs/WhyHow/About_WhyHow.scss
@@ -1,5 +1,8 @@
 .about_why-barasingha-wrapper {
    position: relative;
+   background: linear-gradient(-90deg, rgba(5, 12, 11, 0) 0%, #050C0B 100%);
+   background: -moz-linear-gradient(-90deg, rgba(5, 12, 11, 0) 0%, #050C0B 100%);
+   background: -webkit-linear-gradient(-90deg, rgba(5, 12, 11, 0) 0%, #050C0B 100%);
     .cubeImage{
          position: absolute;
          right: 0px;
