--- a/src/components/sections/Packages/Packages.scss
+++ b/src/components/sections/Packages/Packages.scss
@@ -101,7 +101,7 @@
 
 .package_details_container {
    .owl-item {
-      transition: transform 0.5s;
+      transition: transform 0.5s linear;
    }
 }
 .individual_package_container .owl-nav-indv-custom {
