Add high def images for package carousel

--- a/src/components/sections/Packages/Packages.scss
+++ b/src/components/sections/Packages/Packages.scss
@@ -313,7 +313,7 @@
                   aspect-ratio: 1 / 1;
 
                   img {
-                     object-fit: none;
+                     // object-fit: none;
                   }
                }
 
