Safari performance imp: Use 3d transform for gpu acceleration of css properties

--- a/src/App.scss
+++ b/src/App.scss
@@ -176,6 +176,7 @@ body {
    height: -webkit-fill-available;
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
+   transform: translateZ(0);
    background: linear-gradient(
       180deg,
       rgba(1, 18, 29, 0.7) 0%,
