--- a/src/components/pages/Errors/WrongPassword/WrongPassword.scss
+++ b/src/components/pages/Errors/WrongPassword/WrongPassword.scss
@@ -6,6 +6,7 @@
     bottom: 0;
     background: linear-gradient(180deg, rgba(1, 18, 29, 0.70) 0%, rgba(0, 0, 0, 0.29) 100%);
     backdrop-filter: blur(7px);
+    transform: translateZ(0);
     z-index: 1030;
  }
  
@@ -34,6 +35,8 @@
        border-radius: 16px;
        background: radial-gradient(80.73% 112.82% at 50% -43.36%, rgba(85, 49, 60, 0.96) 0%, rgba(19, 34, 45, 0.96) 100%);
        backdrop-filter: blur(10px);
+       transform: translateZ(0);
+       
        @media (max-width: 768px) {
           width: 300px;
           padding: 32px;
