--- a/src/components/mobilemenu.scss
+++ b/src/components/mobilemenu.scss
@@ -14,6 +14,7 @@
    border-radius: var(--layout-marking-none, 0px);
    background: linear-gradient(180deg, #011118 0%, rgba(1, 17, 24, 0) 100%);
    backdrop-filter: blur(6px);
+   transform: translateZ(0);
 
    &.submenu {
       background: rgba(17, 32, 43, 1);
@@ -224,6 +225,7 @@
    border-radius: 0 0 10px 10px;
    background: #04141b;
    backdrop-filter: blur(6px);
+   transform: translateZ(0);
    padding: 20px;
    margin-bottom: 10px;
 }
