--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -9,6 +9,7 @@
    z-index: 999;
    max-width: auto;
    backdrop-filter: blur(10px);
+   transform: translateZ(0);
 }
 
 .navbar-logo {
@@ -108,6 +109,7 @@
          0px 432px 173px 0px rgba(0, 0, 0, 0.01),
          1px 676px 189px 0px rgba(0, 0, 0, 0);
       backdrop-filter: blur(10px);
+      transform: translateZ(0);
       padding: 24px;
       cursor: default;
 
@@ -204,7 +206,7 @@
          background: rgba(1, 17, 24, 0.8);
          -webkit-backdrop-filter: blur(6px);
          backdrop-filter: blur(6px);
-
+         transform: translateZ(0);
          /* margin: 5px; */
          .title {
             text-align: left;
