--- a/src/components/pages/Career/Projects/Projects.scss
+++ b/src/components/pages/Career/Projects/Projects.scss
@@ -56,6 +56,7 @@
          mix-blend-mode: lighten;
          align-items: center;
          backdrop-filter: blur(10px);
+         transform: translateZ(0);
          transition: all 0.3s;
 
          @media all and (min-width: 768px) {
@@ -150,6 +151,7 @@
          &:hover .project-card-dot-img {
             opacity: 0.1;
             filter: opacity(0.3);
+            transform: translateZ(0);
          }
       }
    }
