--- a/src/components/pages/Career/Testimonials/testimonials.scss
+++ b/src/components/pages/Career/Testimonials/testimonials.scss
@@ -50,6 +50,7 @@
          rgba(255, 255, 255, 0) -17.2%,
          rgba(255, 255, 255, 0.07) 140.9%);
    backdrop-filter: blur(10px);
+   transform: translateZ(0);
 
    @media all and (min-width: 1200px) {
       padding: 40px;
@@ -161,6 +162,7 @@
       background: #101D24 !important;
       box-shadow: 0px 0px 250px 0px rgba(0, 0, 0, 0.20);
       backdrop-filter: blur(10px);
+      transform: translateZ(0);
       margin: 0 !important;
       position: absolute;
       top: calc(50% - 35px);
