--- a/src/components/pages/CaseStudy/CaseStudy_faq/CaseStudy_faq.scss
+++ b/src/components/pages/CaseStudy/CaseStudy_faq/CaseStudy_faq.scss
@@ -19,6 +19,7 @@
       border: 1px solid rgba(44, 45, 61, 0);
       background: rgba(255, 255, 255, 0.05);
       backdrop-filter: blur(54px);
+      transform: translateZ(0);
       padding: 32px;
       /* flex: 1 1 auto; */
    }
@@ -61,6 +62,7 @@
    border: 1px solid #151729;
    background: rgba(255, 255, 255, 0.01);
    backdrop-filter: blur(54px);
+   transform: translateZ(0);
    cursor: pointer;
    /* flex: 1; */
    h6 {
@@ -170,6 +172,7 @@ ul.tab-content-list li {
       border: 1px solid rgba(44, 45, 61, 0);
       background: rgba(255, 255, 255, 0.05);
       backdrop-filter: blur(54px);
+      transform: translateZ(0);
       padding: 32px;
       margin-top: 12px;
       /* flex: 1 1 auto; */
