--- a/src/components/pages/CaseStudy/SearchCaseStudy/SearchCaseStudy.scss
+++ b/src/components/pages/CaseStudy/SearchCaseStudy/SearchCaseStudy.scss
@@ -40,6 +40,7 @@
             rgba(255, 255, 255, 0) 159.97%
          );
          backdrop-filter: blur(10px);
+         transform: translateZ(0);
 
          @media all and (min-width: 992px) {
             padding: 48px;
