--- a/src/components/pages/Common/Applications/products_Applications.scss
+++ b/src/components/pages/Common/Applications/products_Applications.scss
@@ -60,6 +60,7 @@
                rgba(255, 255, 255, 0.07) 115.79%);
          mix-blend-mode: lighten;
          backdrop-filter: blur(10px);
+         transform: translateZ(0);
          // @media (max-width: 768px) {
          // height: 400px;
          align-items: center;
@@ -100,6 +101,7 @@
          &:hover .project-card-dot-img {
             opacity: 0.1;
             filter: opacity(0.3);
+            transform: translateZ(0);
          }
 
          .image-card {
