--- a/src/components/pages/Common/Audience/Audience.scss
+++ b/src/components/pages/Common/Audience/Audience.scss
@@ -56,6 +56,7 @@
          rgba(255, 255, 255, 0) -17.2%,
          rgba(255, 255, 255, 0.07) 140.9%);
    backdrop-filter: blur(10px);
+   transform: translateZ(0);
    overflow: hidden;
 
    @media all and (min-width: 576px) {
@@ -160,6 +161,7 @@
       background: #101D24 !important;
       box-shadow: 0px 0px 250px 0px rgba(0, 0, 0, 0.20);
       backdrop-filter: blur(10px);
+      transform: translateZ(0);
       margin: 0 !important;
       position: absolute;
       top: calc(50% - 35px);
