--- a/src/components/pages/Common/FAQ/FAQ.scss
+++ b/src/components/pages/Common/FAQ/FAQ.scss
@@ -21,6 +21,7 @@
       border: 1px solid rgba(44, 45, 61, 0);
       background: rgba(255, 255, 255, 0.05);
       backdrop-filter: blur(10px);
+      transform: translateZ(0);
       padding: 32px;
    }
 
@@ -111,6 +112,7 @@
          border: 1px solid #151729;
          background: rgba(255, 255, 255, 0.01);
          backdrop-filter: blur(10px);
+         transform: translateZ(0);
          cursor: pointer;
          color: #f2f2f2;
          font-style: normal;
@@ -163,6 +165,7 @@
          border: 1px solid rgba(44, 45, 61, 0);
          background: rgba(255, 255, 255, 0.05);
          backdrop-filter: blur(10px);
+         transform: translateZ(0);
          padding: 32px;
          margin-top: 6px;
          font-size: 12px;
