--- a/src/components/pages/Errors/Page404/Page404.scss
+++ b/src/components/pages/Errors/Page404/Page404.scss
@@ -9,6 +9,7 @@
          rgba(0, 0, 29, 0.5) 0%,
          rgba(0, 0, 0, 0.6) 100%);
    backdrop-filter: blur(5px);
+   transform: translateZ(0);
    padding: 20px;
    overflow: auto;
 
@@ -35,6 +36,7 @@
          rgba(0, 31, 41, 0.38) 0%,
          rgba(2, 32, 50, 0.5) 100%);
    backdrop-filter: blur(10px);
+   transform: translateZ(0);
    padding: 24px;
    border-radius: 16px;
 
