--- a/src/components/pages/Errors/SendingFailed/SendingFailed.scss
+++ b/src/components/pages/Errors/SendingFailed/SendingFailed.scss
@@ -6,6 +6,7 @@
     bottom: 0;
     background: linear-gradient(180deg, rgba(1, 18, 29, 0.70) 0%, rgba(0, 0, 0, 0.29) 100%);
     backdrop-filter: blur(7px);
+    transform: translateZ(0);
     z-index: 1030;
  }
  
@@ -43,6 +44,8 @@
              rgba(2, 32, 50, 0.5) 100%
           );
        backdrop-filter: blur(17px);
+       transform: translateZ(0);
+       
        @media (max-width: 768px) {
           width: 300px;
           padding: 32px;
