--- a/src/components/pages/Forms/ContactUs.scss
+++ b/src/components/pages/Forms/ContactUs.scss
@@ -11,6 +11,7 @@
        rgba(0, 0, 0, 0.6) 100%
     );
     backdrop-filter: blur(5px);
+    transform: translateZ(0);
     padding: 20px;
     overflow: auto;
     
