--- a/src/components/pages/Forms/Success.scss
+++ b/src/components/pages/Forms/Success.scss
@@ -23,6 +23,7 @@
          rgba(0, 31, 41, 0.38) 0%,
          rgba(2, 32, 50, 0.5) 100%);
    backdrop-filter: blur(10px);
+   transform: translateZ(0);
    padding: 24px;
    border-radius: 16px;
 
