--- a/src/components/pages/Forms/WorkWithUs.scss
+++ b/src/components/pages/Forms/WorkWithUs.scss
@@ -10,6 +10,7 @@
        rgba(0, 0, 0, 0.29) 100%
     );
     backdrop-filter: blur(7px);
+    transform: translateZ(0);
     z-index: 1021;
  }
  
