--- a/src/components/pages/Solutions/SolutionSuite/SolutionSuite.scss
+++ b/src/components/pages/Solutions/SolutionSuite/SolutionSuite.scss
@@ -78,6 +78,7 @@
                   rgba(255, 255, 255, 0) 159.97%);
 
             backdrop-filter: blur(10px);
+            transform: translateZ(0);
             width: auto;
             height: auto;
             padding: 12px;
