--- a/src/components/pages/banner.scss
+++ b/src/components/pages/banner.scss
@@ -173,6 +173,7 @@
     box-shadow: 0px 28px 132px 0px rgba(0, 0, 0, 0.25);
     -webkit-backdrop-filter: blur(16px);
     backdrop-filter: blur(16px);
+    transform: translateZ(0);
     margin-top: 100px;
     padding: 24px 24px;
 
@@ -185,6 +186,7 @@
       z-index: -1;
       opacity: 0.1;
       filter: opacity(0.5);
+      transform: translateZ(0);
       background-repeat: repeat;
       background-size: contain;
     }
