--- a/src/components/sections/Certifications/Certifications.scss
+++ b/src/components/sections/Certifications/Certifications.scss
@@ -102,6 +102,7 @@
             // background: lightgray -1.245px -1.315px / 101.709% 104.102% no-repeat;
             mix-blend-mode: luminosity;
             filter: grayscale(1);
+            transform: translateZ(0);
          }
       }
 
