--- a/src/components/sections/Solutions/Solutions.scss
+++ b/src/components/sections/Solutions/Solutions.scss
@@ -68,6 +68,7 @@
             border-radius: 16px;
             background: linear-gradient(300deg, rgba(26,33,35,1) 0%, rgba(10,17,15,1) 60%);
             backdrop-filter: blur(10px);
+            transform: translateZ(0);
             min-height: 380px;
             border-radius: 16px;
             display: none;
